--- a/src/Book/ViewBook.fxml
+++ b/src/Book/ViewBook.fxml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="508.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="407.0" prefWidth="651.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Book.ViewBookController">
    <children>
-      <TableView fx:id="catalogue" prefHeight="400.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="book" layoutX="14.0" layoutY="43.0" prefHeight="219.0" prefWidth="587.0">
         <columns>
-          <TableColumn fx:id="name" minWidth="0.0" prefWidth="175.0" text="Name" />
-          <TableColumn fx:id="createdby" minWidth="0.0" prefWidth="189.0" text="Created By" />
-            <TableColumn fx:id="totalbooks" minWidth="0.0" prefWidth="159.0" text="Total Books" />
+          <TableColumn fx:id="title" maxWidth="57.0" minWidth="-1.0" prefWidth="57.0" text="Title" />
+          <TableColumn fx:id="author" prefWidth="110.0" text="BookAuthor" />
+            <TableColumn fx:id="Subject" maxWidth="170.0" minWidth="-1.0" prefWidth="116.0" text="Subject Area" />
+            <TableColumn fx:id="id" minWidth="0.0" prefWidth="44.0" text="ID" />
+            <TableColumn fx:id="date" minWidth="0.0" prefWidth="79.0" text="Date" />
+            <TableColumn fx:id="number" prefWidth="180.0" text="Number of Copies" />
         </columns>
       </TableView>
    </children>
