--- a/src/Librarian/admin.fxml
+++ b/src/Librarian/admin.fxml
@@ -1,12 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
@@ -24,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="679.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.AdminController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="679.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.AdminController">
    <children>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <top>
@@ -51,37 +44,37 @@
          <right>
             <VBox prefHeight="455.0" prefWidth="148.0" BorderPane.alignment="CENTER">
                <children>
-                  <JFXButton fx:id="addmember" contentDisplay="TOP" onAction="#updatemember" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Member">
+                  <JFXButton fx:id="addmember" buttonType="RAISED" contentDisplay="TOP" onAction="#updatemember" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Member">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <font>
+                        <Font size="14.0" />
+                     </font></JFXButton>
+                  <JFXButton fx:id="addbook" buttonType="RAISED" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleAddBookBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Book">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                      <font>
                         <Font size="14.0" />
                      </font></JFXButton>
-                  <JFXButton fx:id="addbook" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleAddBookBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Add Book">
+                  <JFXButton fx:id="viewmembers" buttonType="RAISED" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleViewMemBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="View Members">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                      <font>
                         <Font size="14.0" />
                      </font></JFXButton>
-                  <JFXButton fx:id="viewmembers" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleViewMemBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="View Members">
+                  <JFXButton fx:id="viewbooks" buttonType="RAISED" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleViewBooksBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Catalogue">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
                      <font>
                         <Font size="14.0" />
                      </font></JFXButton>
-                  <JFXButton fx:id="viewbooks" contentDisplay="TOP" layoutX="10.0" layoutY="10.0" onAction="#handleViewBooksBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Catalogue">
+                  <JFXButton fx:id="settings" buttonType="RAISED" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleSettingsBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Issuable Book">
                      <VBox.margin>
                         <Insets top="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="14.0" />
-                     </font></JFXButton>
-                  <JFXButton fx:id="settings" contentDisplay="TOP" layoutX="10.0" layoutY="84.0" onAction="#handleSettingsBtnAction" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: cyan;" text="Issuable Book">
-                     <VBox.margin>
-                        <Insets bottom="10.0" top="10.0" />
                      </VBox.margin>
                      <font>
                         <Font size="14.0" />
@@ -143,12 +136,12 @@
                                        </VBox.margin></HBox>
                                     <JFXButton buttonType="RAISED" onAction="#searchbook" prefHeight="39.0" prefWidth="82.0" style="-fx-background-color: cyan;" text="Search">
                                        <VBox.margin>
-                                          <Insets left="30.0" />
+                                          <Insets left="200.0" right="50.0" top="10.0" />
                                        </VBox.margin>
                                        <font>
                                           <Font size="14.0" />
                                        </font></JFXButton>
-                                    <Label prefHeight="37.0" prefWidth="531.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Member Information">
+                                    <Label prefHeight="25.0" prefWidth="516.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Member Information">
                                        <font>
                                           <Font size="16.0" />
                                        </font>
@@ -156,8 +149,7 @@
                                           <Insets top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <JFXButton prefHeight="25.0" prefWidth="94.0" text="Search" />
-                                    <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="138.0" prefWidth="531.0">
+                                    <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="120.0" prefWidth="544.0">
                                        <children>
                                           <JFXTextField fx:id="entermemberid" labelFloat="true" maxWidth="141.0" minWidth="141.0" prefHeight="31.0" prefWidth="141.0" promptText="Enter Member ID">
                                              <HBox.margin>
@@ -192,12 +184,12 @@
                                           </VBox>
                                        </children>
                                        <VBox.margin>
-                                          <Insets bottom="40.0" top="40.0" />
+                                          <Insets bottom="50.0" top="10.0" />
                                        </VBox.margin>
                                     </HBox>
                                  </children>
                               </VBox>
-                              <Label layoutY="10.0" prefHeight="13.0" prefWidth="531.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Book Information">
+                              <Label layoutY="10.0" prefHeight="25.0" prefWidth="530.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Book Information">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
@@ -269,7 +261,10 @@
                                     <Font size="14.0" />
                                  </font>
                               </JFXTextField>
-                              <JFXButton layoutX="440.0" layoutY="161.0" onAction="#returnbook" text="Return" />
+                              <JFXButton buttonType="RAISED" layoutX="380.0" layoutY="194.0" onAction="#returnbook" prefHeight="57.0" prefWidth="115.0" style="-fx-background-color: cyan;" text="Return">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font></JFXButton>
                            </children></AnchorPane>
                   </content>
                 </Tab>
