--- a/src/Librarian/members.fxml
+++ b/src/Librarian/members.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.geometry.Insets?>
@@ -13,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="543.0" prefWidth="528.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.MembersController">
+<AnchorPane id="AnchorPane" prefHeight="600.0" prefWidth="528.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Librarian.MembersController">
     
    <children>
       <VBox layoutX="25.0" prefHeight="525.0" prefWidth="568.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -82,20 +77,26 @@
                   <Font size="14.0" />
                </font>
             </JFXTextField>
-            <JFXTextField fx:id="id" />
+            <JFXTextField fx:id="id" editable="false" labelFloat="true" maxWidth="508.0" minWidth="508.0" prefHeight="36.0" prefWidth="508.0" promptText="Your ID">
+               <font>
+                  <Font size="14.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </VBox.margin></JFXTextField>
             <HBox prefHeight="85.0" prefWidth="495.0">
                <children>
-                  <JFXButton fx:id="save" onAction="#handleSaveBtnAction" prefHeight="127.0" prefWidth="287.0" style="-fx-background-color: cyan;" text="Save">
+                  <JFXButton fx:id="save" buttonType="RAISED" onAction="#handleSaveBtnAction" prefHeight="130.0" prefWidth="250.0" style="-fx-background-color: cyan;" text="Save">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
                      <font>
                         <Font size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="cancel" onAction="#handleCancelBtnAction" prefHeight="94.0" prefWidth="251.0" style="-fx-background-color: cyan;" text="Cancel">
+                  <JFXButton fx:id="cancel" buttonType="RAISED" onAction="#handleCancelBtnAction" prefHeight="130.0" prefWidth="250.0" style="-fx-background-color: cyan;" text="Cancel">
                      <HBox.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        <Insets bottom="10.0" left="10.0" top="10.0" />
                      </HBox.margin>
                      <font>
                         <Font size="14.0" />
