--- a/src/Login/ForgetPassword.fxml
+++ b/src/Login/ForgetPassword.fxml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.ForgetPasswordController">
+<AnchorPane id="AnchorPane" prefHeight="355.0" prefWidth="356.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Login.ForgetPasswordController">
    <children>
-      <Label layoutX="41.0" layoutY="70.0" text="Name" />
-      <JFXTextField fx:id="txt1" layoutX="83.0" layoutY="63.0" promptText="Enter name" />
-      <JFXTextField fx:id="txt2" layoutX="83.0" layoutY="109.0" />
-      <JFXTextField fx:id="txt3" layoutX="83.0" layoutY="163.0" />
-      <Button fx:id="btn2" layoutX="293.0" layoutY="182.0" mnemonicParsing="false" onAction="#search" text="Button" />
+      <Label layoutX="26.0" layoutY="89.0" prefHeight="31.0" prefWidth="71.0" text="Your ID">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <JFXTextField fx:id="txt1" labelFloat="true" layoutX="118.0" layoutY="77.0" maxWidth="259.0" minWidth="212.0" prefHeight="43.0" prefWidth="259.0" promptText="Enter ID">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txt2" editable="false" layoutX="115.0" layoutY="135.0" maxWidth="259.0" minWidth="209.0" prefHeight="43.0" prefWidth="259.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField fx:id="txt3" editable="false" layoutX="115.0" layoutY="194.0" maxWidth="259.0" minWidth="259.0" prefHeight="43.0" prefWidth="259.0">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXTextField>
+      <JFXButton buttonType="RAISED" layoutX="138.0" layoutY="266.0" onAction="#search" prefHeight="57.0" prefWidth="124.0" style="-fx-background-color: cyan;" text="Search">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </JFXButton>
+      <Label layoutY="-2.0" prefHeight="43.0" prefWidth="377.0" style="-fx-background-color: black; -fx-text-fill: white;" text="Get Password">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
